# data-eng-taxi-ibis-dagster

./: .gitignore  README.md  justfile  pyproject.toml  taxi_pipeline.py  taxi_pipeline_native.py
utils/: check_pyspark.py
